--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     --texto-fundo: rgba(58, 55, 94, 0.3);
 
 }
-.conteudo-principal { display: flex;
+    .conteudo-principal { display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -21,3 +21,32 @@
     width: 100%;
     margin: 0 auto;
     }
+    .titulo-principal span { 
+        color: var(--verde);
+        text-align: left;
+        width: 100%;
+        font-size: 32px;
+        }
+      .botao:first-child {border-radius: 40px 0 0 0}
+       ;{ font-family: «Crakra Petch», sans-serif;
+          background-color: var(--botao-inativo);
+          color: var(--branco); display: flex;
+          justify-content: center;
+          padding: 1em;
+          font-size: 18px;
+          align-items: center;
+          width: 100%;
+          border-bottom: 4px solid var(--botao-ativo);
+          border-left: 2px solid var(--botao-ativo);
+          border-right: 2px solid var(--botao-ativo);
+          border-top: none; }
+          .botoes { display: block;
+          }
+          @media screen and (min-width: 768px) {
+             .botoes { display: flex;
+             }
+             .botao:last-child { 
+                 border-radius: 0 40px 0 0;
+             }
+          }
+          
