--- a/style.css
+++ b/style.css
@@ -50,3 +50,8 @@
              }
           }
           
+          .ativo{
+            background-color: var(--botao-ativo);
+            border-bottom: 4px solid var(--verde);
+            }
+            
